# fprintd

./: .gitignore  .gitlab-ci.yml  NEWS  README  README.md  meson.build  meson_options.txt
data/: fprintd.pod  pam_fprintd.pod
pam/: fingerprint-strings.h  meson.build  pam_fprintd.c
po/: LINGUAS  af.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fprintd.pot  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  kab.po  (+36 more)
src/: device.c  net.reactivated.Fprint.Device.xml
tests/: fprintd.py  meson.build  output_checker.py  test.in  test_fprintd_utils.py
tests/dbusmock/: fprintd.py
tests/pam/: meson.build  test_pam_fprintd.py
utils/: delete.c  enroll.c  list.c  verify.c
